src/objects/Spend_Request__c.object
<CustomObject>
    <fields>
        <fullName>Amount_of_IT_Spend_Delete__c</fullName>
        <inlineHelpText>How Much (If Any) of this Professional Services Request is IT Spend?</inlineHelpText>
        <label>Amount of IT Spend - Delete</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_of_Prof_Svcs_Delete__c</fullName>
        <inlineHelpText>How Much (If Any) of this IT Spend Request is Professional Services?</inlineHelpText>
        <label>Amount of Prof. Svcs - Delete</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <inlineHelpText>Enter name if Not Listed.</inlineHelpText>
        <label>Application Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Type_2__c</fullName>
        <description>Hidden field for reporting purposes only. Will be populated by a workflow rule field update.</description>
        <label>Application Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <inlineHelpText>If the purchase is not for an app, choose ‘N/A’.  If app is not on list, choose ‘not listed’.  If you don’t know the app, choose ‘unknown.’</inlineHelpText>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_Staff_Office__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>360 Survey Application</fullName>
                </value>
                <value>
                    <fullName>3P Correspondence Tracking</fullName>
                </value>
                <value>
                    <fullName>72AQRS-72A Quarterly Reporting System</fullName>
                </value>
                <value>
                    <fullName>AAAP-Automated Advanced Acquisition Program (Advanced Leasing Offers)</fullName>
                </value>
                <value>
                    <fullName>AAC Inquiry</fullName>
                </value>
                <value>
                    <fullName>ABP-Asset Business Plan</fullName>
                </value>
                <value>
                    <fullName>ACI-Administrator&apos;s Critical Items</fullName>
                </value>
                <value>
                    <fullName>ACIS-Advantage Customer Information System</fullName>
                </value>
                <value>
                    <fullName>Acquisition Resource Center</fullName>
                </value>
                <value>
                    <fullName>Acquisition Workforce Training Database</fullName>
                </value>
                <value>
                    <fullName>ActivIdentity Card Management System</fullName>
                </value>
                <value>
                    <fullName>AD-Active Directory</fullName>
                </value>
                <value>
                    <fullName>ADS-Appraisal Data System</fullName>
                </value>
                <value>
                    <fullName>Advanced Metering</fullName>
                </value>
                <value>
                    <fullName>AMI AssetTrack</fullName>
                </value>
                <value>
                    <fullName>Anonymous E-mail</fullName>
                </value>
                <value>
                    <fullName>APM-Acquisition Planning Module</fullName>
                </value>
                <value>
                    <fullName>APOS-Asia Point of Sales</fullName>
                </value>
                <value>
                    <fullName>Application Development Management System</fullName>
                </value>
                <value>
                    <fullName>ARCS-Accounts Receivable Claim System</fullName>
                </value>
                <value>
                    <fullName>ASAP-Advantage Spend Analysis Program</fullName>
                </value>
                <value>
                    <fullName>ASSIST-Assisted Services Shared Information SysTem</fullName>
                </value>
                <value>
                    <fullName>Attributes Harvester</fullName>
                </value>
                <value>
                    <fullName>AutoCAD Config</fullName>
                </value>
                <value>
                    <fullName>AutoCAD Interface Configuration Utility</fullName>
                </value>
                <value>
                    <fullName>Auto Plot</fullName>
                </value>
                <value>
                    <fullName>AWM-Acquisition Workflow Manager</fullName>
                </value>
                <value>
                    <fullName>BA54</fullName>
                </value>
                <value>
                    <fullName>Badge/ID App</fullName>
                </value>
                <value>
                    <fullName>BarScan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Number__c</fullName>
        <formula>CASE(RecordType.Name,&quot;Spend Request&quot;,IF( Total_Approved_Cost__c &gt;= 150000,Number_for_Approval__c,NULL) ,&quot;Legacy IT Spend Request&quot;,IF((ISPICKVAL( Status__c , &quot;Authorized to Proceed&quot;) &amp;&amp;(Total_Planned_Cost__c &gt;= 150000)),Number_for_Approval__c,NULL),&quot;Legacy Professional Services Request&quot;,IF((ISPICKVAL( Status__c , &quot;Authorized to Proceed&quot;) &amp;&amp;(Total_Planned_Cost__c &gt;= 150000)),Number_for_Approval__c,NULL),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorization Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Items__c</fullName>
        <label>Approved Items</label>
        <summaryFilterItems>
            <field>Items__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Items__c.Spend_Request_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CIO_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for the IEA team to mark those records that they feel will need further review.  Used in the IT Acquisition planning App.</description>
        <inlineHelpText>System generated flag for requests over $150K.</inlineHelpText>
        <label>Spend Review Board</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number_populated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used for reporting only will be populated by workflow</description>
        <label>Contract Number populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <description>Used on the Professional Services Request Page Layout of the Spend Tracker Application</description>
        <inlineHelpText>Please be sure to select a value that includes all option years.</inlineHelpText>
        <label>Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 1 YR</fullName>
                </value>
                <value>
                    <fullName>1 YR</fullName>
                </value>
                <value>
                    <fullName>2 YR</fullName>
                </value>
                <value>
                    <fullName>3 YR</fullName>
                </value>
                <value>
                    <fullName>4 YR</fullName>
                </value>
                <value>
                    <fullName>5+ YR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deliverables_and_Outcomes__c</fullName>
        <inlineHelpText>Goods or services the vendor will provide (e.g. IGCE) &amp; desired result.</inlineHelpText>
        <label>Deliverables and Outcomes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Denied_Items__c</fullName>
        <label>Denied Items</label>
        <summaryFilterItems>
            <field>Items__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </summaryFilterItems>
        <summaryForeignKey>Items__c.Spend_Request_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Disclaimer__c</fullName>
        <defaultValue>&quot;Do NOT enter sensitive data in this system. The GSA Spend Tracker is intended to provide transparency into agency spending while helping GSA reduce costs and ensure procurements are consistent with policy, standards, and strategy. As a result, spend requests may be viewed by all GSA employees. Sensitive information, such as Independent Government Cost Estimates (IGCEs) and statements of work/objectives (SOW/SOOs) for new awards, should only be shared with your SR’s reviewer as an email attachment or access controlled Google Drive file. For more information please get in touch with one of the contacts listed on the GSA Spend Chatter Group.&quot;+BR()+BR()+&quot;Note: Saving the record by the Spend Request owner will be considered as an acknowledgement that he/she has read the above statement and agrees that they will not enter any sensitive data in this system.&quot;</defaultValue>
        <label>Disclaimer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FAS_Approved__c</fullName>
        <description>This field indicates whether or not FAS leadership has pre-approved a Spend Request prior to it being reviewed by the Spend Review Board.</description>
        <inlineHelpText>Field is reserved for approvers. No user input required.</inlineHelpText>
        <label>FAS Approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flag_Reason__c</fullName>
        <description>Used for the IEA team in the IT Acquisition Spending App to allow them to flag (and denote a reason for flagging) for review by IT review board.  This field will be hidden for all users except for IEA, and IT review board.</description>
        <inlineHelpText>System generated flag for requests over $150K.</inlineHelpText>
        <label>Flag Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <inlineHelpText>If yes, select fund from list.</inlineHelpText>
        <label>Funding Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>105X-Federal Citizen Services Fund</fullName>
                </value>
                <value>
                    <fullName>106A-Allow &amp; Ofc Staff Former President</fullName>
                </value>
                <value>
                    <fullName>120A-Ofc of Inspector Gen Appropriation</fullName>
                </value>
                <value>
                    <fullName>120R*-Ofc of Inspector Gen Reimbursable</fullName>
                </value>
                <value>
                    <fullName>122-Ofc of Inspector Gen, Recovery Act</fullName>
                </value>
                <value>
                    <fullName>130A-Transportation  Audit</fullName>
                </value>
                <value>
                    <fullName>142A-Operating Expenses Appropriation</fullName>
                </value>
                <value>
                    <fullName>142A-Pers Prop Oper Expense Appropriate</fullName>
                </value>
                <value>
                    <fullName>142A-Real Prop Disp Oper Exp Appropriate</fullName>
                </value>
                <value>
                    <fullName>142R-Operating Expenses Reimbursable</fullName>
                </value>
                <value>
                    <fullName>142R-Pers Prop Oper Expense Reimbursable</fullName>
                </value>
                <value>
                    <fullName>142R-Real Prop Disp Oper Expens Reimburs</fullName>
                </value>
                <value>
                    <fullName>151A-Gov wide Policy Appropriation</fullName>
                </value>
                <value>
                    <fullName>151R-Government wide Policy Reimbursable</fullName>
                </value>
                <value>
                    <fullName>153X-E-Government Fund</fullName>
                </value>
                <value>
                    <fullName>172R-OGP, Interagency Councils (2012-3)</fullName>
                </value>
                <value>
                    <fullName>173R-OGP, Interagency Councils (2013-4)</fullName>
                </value>
                <value>
                    <fullName>174R-OGP, Interagency Councils (2014-5)</fullName>
                </value>
                <value>
                    <fullName>192X-Federal Buildings Fund</fullName>
                </value>
                <value>
                    <fullName>262X-Working Capital Fund</fullName>
                </value>
                <value>
                    <fullName>285X-Acquisition Services Fund</fullName>
                </value>
                <value>
                    <fullName>296X-Integrated Acquisition Environment</fullName>
                </value>
                <value>
                    <fullName>442-Federal Buildings Fund, Recovery Act</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_funds_been_budgeted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have funds been budgeted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPA_Denial_Reason__c</fullName>
        <description>Free Text - Required if denied - send email on switch to Denied, include record link, the denial reason and the POC who Denied the record</description>
        <inlineHelpText>Reserved for reviewer&apos;s comments.</inlineHelpText>
        <label>Denial Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IT_Spend_Items_Count__c</fullName>
        <label>IT Spend Items Count</label>
        <summaryFilterItems>
            <field>Items__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>IT Spend Item</value>
        </summaryFilterItems>
        <summaryForeignKey>Items__c.Spend_Request_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Investment_Type__c</fullName>
        <description>Hidden field for reporting purposes</description>
        <label>Investment Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investment__c</fullName>
        <inlineHelpText>Based on OMB 300/53.</inlineHelpText>
        <label>Investment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_Staff_Office__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accessibility and Usability</fullName>
                </value>
                <value>
                    <fullName>Acquisition Career Management Information System (ACMIS)</fullName>
                </value>
                <value>
                    <fullName>Acquisition Planning Module (APM)</fullName>
                </value>
                <value>
                    <fullName>Acquisition Planning Wizard</fullName>
                </value>
                <value>
                    <fullName>Applied Learning Center (ALC)</fullName>
                </value>
                <value>
                    <fullName>Asset Business Plan (ABP)</fullName>
                </value>
                <value>
                    <fullName>Assisted Services Shared Information SysTem (ASSIST)</fullName>
                </value>
                <value>
                    <fullName>Budget Formulation Line of Business</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence (BI)</fullName>
                </value>
                <value>
                    <fullName>Buy Accessible Wizard</fullName>
                </value>
                <value>
                    <fullName>Carbon Footprint Tool</fullName>
                </value>
                <value>
                    <fullName>Catalog of Federal Domestic Assistance (CFDA) System</fullName>
                </value>
                <value>
                    <fullName>Center for Acquisition Excellence (CAE)</fullName>
                </value>
                <value>
                    <fullName>Centralized Mailing List Service (CMLS)</fullName>
                </value>
                <value>
                    <fullName>Central Office Program Support</fullName>
                </value>
                <value>
                    <fullName>Citizen Engagement Platform (CEP)</fullName>
                </value>
                <value>
                    <fullName>City Pairs</fullName>
                </value>
                <value>
                    <fullName>Cloud Computing</fullName>
                </value>
                <value>
                    <fullName>Commercial Warehouse Management System (WMS)</fullName>
                </value>
                <value>
                    <fullName>Component Organization &amp; Registration Environment (CORE.gov)</fullName>
                </value>
                <value>
                    <fullName>Contract Writing System (CWS)</fullName>
                </value>
                <value>
                    <fullName>Customer Analysis and Research Tool (CART)</fullName>
                </value>
                <value>
                    <fullName>Customer Relationship Management (CRM)</fullName>
                </value>
                <value>
                    <fullName>Customer Solutions</fullName>
                </value>
                <value>
                    <fullName>Customer Supply Center System (CSC)</fullName>
                </value>
                <value>
                    <fullName>Data.gov</fullName>
                </value>
                <value>
                    <fullName>E-Authentication (e-Gov)</fullName>
                </value>
                <value>
                    <fullName>eFACA</fullName>
                </value>
                <value>
                    <fullName>eForms</fullName>
                </value>
                <value>
                    <fullName>eGov Innovation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lock_Spend_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Edits aren&apos;t allowed when locked. If you would like to unlock this request, please post a comment to the GSA Spend Chatter Group or Submit a new request.</inlineHelpText>
        <label>Locked Parent Spend Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_for_Approval__c</fullName>
        <displayFormat>AUTH-{00000000}</displayFormat>
        <label>Number for Approval</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_External_SSOs__c</fullName>
        <inlineHelpText>Identify any other organizations involved.</inlineHelpText>
        <label>Other SSOs or External Partners</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PBS_Approved__c</fullName>
        <description>This picklist is used to indicate that the record has undergone PBS review and and is either approved or denied by PBS leadership. If approved, the record will be moved to In Review or Authorized to process depending on the threshold. If denied, the record will move to a denied status.</description>
        <inlineHelpText>Field is reserved for approvers. No user input required.</inlineHelpText>
        <label>PBS Approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PR_Number_populated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be checked if the PR number is populated (will be done by workflow)</description>
        <label>PR Number populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pegasys_PR_OR_Credit_Card_Log__c</fullName>
        <label>Pegasys PR # or Credit Card Log #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Period_of_Performance_End_Date__c</fullName>
        <inlineHelpText>Enter planned or expected PoP dates.</inlineHelpText>
        <label>Planned Period Of Performance End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Period_of_Performance_Start_Date__c</fullName>
        <inlineHelpText>Enter planned or expected PoP dates.</inlineHelpText>
        <label>Planned Period of Performance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Place_Of_Work__c</fullName>
        <label>Primary Place Of Work</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On-Site</fullName>
                </value>
                <value>
                    <fullName>Off-Site</fullName>
                </value>
                <value>
                    <fullName>Either</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_or_Operational_activity__c</fullName>
        <description>Used for the IT Acquisition App.</description>
        <inlineHelpText>If the purchase is for development, enhancement, or modernization of the IT portfolio, enter a project.  If it is for upkeep, leave this blank.</inlineHelpText>
        <label>Project or Operational Activity</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Complete_Date__c</fullName>
        <description>When &quot;Record Complete&quot; is checked, &quot;Record Complete Date&quot; field will be filled with Today&apos;s date &amp; used in &quot;GSA Spend Daily Status Report&quot;.</description>
        <label>Record Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate that the requester has finished adding all line items to the IT Spend Tracking form.</description>
        <inlineHelpText>Check this box ONLY when you are finished adding all line items to your tracker.  Checking this box will NOT allow you to enter any further line items to the record.</inlineHelpText>
        <label>Record Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Identify whether request is specific to CO, a region or enterprise-wide.</inlineHelpText>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nationwide</fullName>
                </value>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>Region 11</fullName>
                </value>
                <value>
                    <fullName>Central Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Description__c</fullName>
        <inlineHelpText>Enter a synopsis of the request&apos;s purpose.</inlineHelpText>
        <label>Request Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Title__c</fullName>
        <label>Request Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Findings__c</fullName>
        <description>For EA Team Review.</description>
        <label>Review Findings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Staff_Office__c</fullName>
        <label>Service/Staff Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA - Office of the Administrator</fullName>
                </value>
                <value>
                    <fullName>AC - Office of the Chief of Staff</fullName>
                </value>
                <value>
                    <fullName>AD - Office of the Deputy Administrator</fullName>
                </value>
                <value>
                    <fullName>AE - Office of the Senior Counselor to the Administrator</fullName>
                </value>
                <value>
                    <fullName>AF - Office of the Assistant Administrator</fullName>
                </value>
                <value>
                    <fullName>AG - Office of the Associate Administrator</fullName>
                </value>
                <value>
                    <fullName>AK - Office of Civil Rights</fullName>
                </value>
                <value>
                    <fullName>B - Office of the Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>C - Office of the Chief People Officer</fullName>
                </value>
                <value>
                    <fullName>D - Office of Emergency Response &amp; Recovery</fullName>
                </value>
                <value>
                    <fullName>E - Office of Small Business Utilization</fullName>
                </value>
                <value>
                    <fullName>G - Civilan Board of Contract Appeals</fullName>
                </value>
                <value>
                    <fullName>H - Office of Administrative Services</fullName>
                </value>
                <value>
                    <fullName>I - GSA IT</fullName>
                </value>
                <value>
                    <fullName>J - Office of the Inspector General</fullName>
                </value>
                <value>
                    <fullName>L - Office of General Counsel</fullName>
                </value>
                <value>
                    <fullName>M - Office of Governmentwide Policy</fullName>
                </value>
                <value>
                    <fullName>MV-Office of the Chief Acquisition Office</fullName>
                </value>
                <value>
                    <fullName>P - Public Buildings Service</fullName>
                </value>
                <value>
                    <fullName>Q - Federal Acquisition Service</fullName>
                </value>
                <value>
                    <fullName>R - Office of Performance Improvement</fullName>
                </value>
                <value>
                    <fullName>S - Office of Congressional &amp; Intergovernmental Affairs</fullName>
                </value>
                <value>
                    <fullName>WA - Office of the Regional Administrator</fullName>
                </value>
                <value>
                    <fullName>X - Office of Citizen Services &amp; Innovative Technologies</fullName>
                </value>
                <value>
                    <fullName>Z - Office of Communications and Marketing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sole_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you anticipate this being a sole source acquisition?</inlineHelpText>
        <label>Sole Source?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>System generated depending on review progress.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Under SRB Review</fullName>
                </value>
                <value>
                    <fullName>Under PBS Review</fullName>
                </value>
                <value>
                    <fullName>Under FAS Review</fullName>
                </value>
                <value>
                    <fullName>Authorized to Proceed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_for_Approval_Date__c</fullName>
        <description>When &quot;Submit for Approval&quot; button is clicked, &quot;Submit for Approval Date&quot; field will be filled with Today&apos;s date &amp; used in &quot;GSA Spend Daily Status Report&quot;.</description>
        <label>Submit for Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitter_ORG__c</fullName>
        <formula>CreatedBy.Division + &quot; - &quot; + CreatedBy.User_Organization_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System generated based on owner&apos;s GCIMS information.</inlineHelpText>
        <label>Submitter ORG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_M_or_FFP__c</fullName>
        <label>T&amp;M or FFP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>T&amp;M (Time and Materials)</fullName>
                </value>
                <value>
                    <fullName>Labor Hour</fullName>
                </value>
                <value>
                    <fullName>Cost Reimbursable</fullName>
                </value>
                <value>
                    <fullName>Firm Fixed Price</fullName>
                </value>
                <value>
                    <fullName>LOE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Approved_Cost__c</fullName>
        <inlineHelpText>No entry required. This is system calculated field based on approved line items.</inlineHelpText>
        <label>Total Approved Cost</label>
        <summarizedField>Items__c.Total_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Items__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Items__c.Spend_Request_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_DM_E_Costs__c</fullName>
        <inlineHelpText>System generated based on costs entered in line items.</inlineHelpText>
        <label>Total DM&amp;E Costs</label>
        <summarizedField>Items__c.DM_E_Cost__c</summarizedField>
        <summaryForeignKey>Items__c.Spend_Request_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Items__c</fullName>
        <label>Total Number of Items</label>
        <summaryForeignKey>Items__c.Spend_Request_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_O_M_Costs__c</fullName>
        <inlineHelpText>System generated based on costs entered in line items.</inlineHelpText>
        <label>Total O&amp;M Costs</label>
        <summarizedField>Items__c.O_M_Cost__c</summarizedField>
        <summaryForeignKey>Items__c.Spend_Request_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>